--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "expo": "~47.0.8",
+    "expo-constants": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-normalize": "^1.0.1",
+    "react-native-reanimated": "~2.12.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
